force-app/main/default/objects/Request_for_Change__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <color>#0B6FCE</color>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
                <color>#78C953</color>
                <label>Urgent</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <color>#E27001</color>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>Vendor</fullName>
                <color>#A845DC</color>
                <label>Vendor</label>
            </value>
            <value>
                <fullName>Release</fullName>
                <color>#F3D904</color>
                <label>Release</label>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
                <color>#A53711</color>
                <label>Unauthorized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>