force-app/main/default/objects/Request_for_Change__c/fields/Unsuccessful_Type__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Type__c</fullName>
    <label>Unsuccessful Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolled back Successfully</fullName>
            </value>
            <value>
                <fullName>Rolled back with Issues</fullName>
            </value>
            <value>
                <fullName>Additional Work Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>