force-app/main/default/objects/Request_for_Change__c/fields/Vendor_Outage__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Outage__c</fullName>
    <inlineHelpText>The team should select ‘yes’ if outage is expected’.</inlineHelpText>
    <label>Outage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>