force-app/main/default/objects/Request_for_Change__c/fields/Where_is_the_Data_Located__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_Data_Located__c</fullName>
    <label>Where is the Data Located?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>