force-app/main/default/objects/Request_for_Change__c/fields/X5_Successsful_RFC_s__c.field-meta.xml
<CustomField>
    <fullName>X5_Successsful_RFC_s__c</fullName>
    <label>5 Successsful RFC #s</label>
    <type>TextArea</type>
</CustomField>