force-app/main/default/objects/Request_for_Change__c/recordTypes/Request_for_Change.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Change</fullName>
    <active>true</active>
    <label>Request for Change</label>
</RecordType>