force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Approved</fullName>
    <active>true</active>
    <description>prevent changes from the RFC if status = Approved</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Type__c , &apos;Vendor&apos;)) ||
NOT(ISPICKVAL( Type__c , &apos;Release&apos;)),
 isWithdrawRequestClicked__c  = false,
$User.ProfileId &lt;&gt; &apos;00e30000001kms9&apos;,
ISPICKVAL( Status__c , &apos;Approved&apos;),
ISCHANGED( Risk__c ),
ISCHANGED( Planned_Start_Date_Time__c ),
ISCHANGED( Planned_End_Date_Time__c ),
ISCHANGED( Short_Description__c ), 
ISCHANGED( Detailed_Description__c ),
ISCHANGED( Location__c ),
ISCHANGED( Vendor_Outage__c ),
ISCHANGED( Outage_Start_Date_Time__c ),
ISCHANGED( Outage_End_Date_Time__c ),
ISCHANGED( Vendor_Change_Impact__c ),
ISCHANGED( Outage_Location__c )
)</errorConditionFormula>
    <errorMessage>Once Approved, only the Closing Details may be changed.</errorMessage>
</ValidationRule>