force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_AssingedTo_Required_forapproval.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_AssingedTo_Required_forapproval</fullName>
    <active>true</active>
    <description>The Assigned To field must be populated before the status can be set to Pending Approval</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Pending Approval(s)&quot;),
ISBLANK( Assigned_To__c)
)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Assigned To can not be blank when submitting a request for Approval</errorMessage>
</ValidationRule>