force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_MOP_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_MOP_Details</fullName>
    <active>false</active>
    <description>If MOP details are unchecked then all fields in the planning area are required</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Type__c,&#39;Vendor&#39;)),
NOT(ISPICKVAL(Type__c,&#39;Normal&#39;)),
MOP_details_will_be_attached__c = FALSE,
OR(
ISBLANK( Preparation_Plan__c ),
ISBLANK( Implementation_Plan__c ),
ISBLANK( Validation_Plan__c ), 
ISBLANK( Backout_Plan__c )
)
)</errorConditionFormula>
    <errorDisplayField>MOP_details_will_be_attached__c</errorDisplayField>
    <errorMessage>If Planning details are not going to be in an attached MOP then please enter them on the RFC. If they will be on the attached MOP then attach the MOP after saving the RFC and select here to bypass Planning details.</errorMessage>
</ValidationRule>