force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Network_and_Firewall.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Network_and_Firewall</fullName>
    <active>false</active>
    <description>Require additional fields if Category = Network and Sub-Category = Firewall</description>
    <errorConditionFormula>AND(
$User.ProfileId &lt;&gt; &apos;00e30000001kms9&apos;, 
ISPICKVAL( Category__c, &quot;Network&quot;),
ISPICKVAL( Sub_Category__c , &quot;Firewall&quot;),
ISBLANK ( Source_IP_Subnet_s__c ),
ISBLANK (  Source_Port_s__c  ),
ISBLANK (  Destination_IP_Subnet_s__c  ),
ISBLANK (  Destination_Port_s__c  ),
ISBLANK (  Business_Justification__c ),
ISBLANK (   Queue_ID_if_known__c  )
)</errorConditionFormula>
    <errorMessage>Please populate the following Focus Area fields when Category of Network and Sub-Category of Firewall is present: Source IP/Subnet(s), Source Port(s), Destination IP/Subnet(s), Destination Port(s), Business Justification, and Queue ID (if known)</errorMessage>
</ValidationRule>