force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Not_Tested.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Not_Tested</fullName>
    <active>false</active>
    <description>If &quot;Has Backout Been Tested&quot; = No then user must advise why</description>
    <errorConditionFormula>AND(
ISPICKVAL( Has_Backout_Been_Tested__c , &#39;No&#39;) ,
ISBLANK( If_not_tested_why__c ) 
)</errorConditionFormula>
    <errorDisplayField>If_not_tested_why__c</errorDisplayField>
    <errorMessage>Please advise why a blackout has not been tested.</errorMessage>
</ValidationRule>