force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_PGi_Product_Related.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_PGi_Product_Related</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Is_this_a_change_to_a_PGi_Product__c = TRUE,
ISPICKVAL( PGi_Product_Name__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>PGi_Product_Name__c</errorDisplayField>
    <errorMessage>Please select the Product associated with this RFC</errorMessage>
</ValidationRule>