force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Planned_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Planned_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Planned_End_Date_Time__c  &lt;  Planned_Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>Planned_End_Date_Time__c</errorDisplayField>
    <errorMessage>Planned End Date/Time can not be before the Planned Start Date/Time</errorMessage>
</ValidationRule>