force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_SubCategory_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_SubCategory_Other</fullName>
    <active>false</active>
    <description>When the Sub Category is Other</description>
    <errorConditionFormula>AND(
ISPICKVAL(   Sub_Category__c   , &apos;Other&apos;),
ISBLANK ( If_Other__c )
)</errorConditionFormula>
    <errorDisplayField>If_Other__c</errorDisplayField>
    <errorMessage>You must populate if your Sub-Category is Other</errorMessage>
</ValidationRule>