force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Vendor_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Vendor_Approved</fullName>
    <active>false</active>
    <description>When the Vendor Change Form is approved only Status and Detailed Description can be updated.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Vendor Change Request&quot;,
ISPICKVAL(  Status__c  , &#39;Approved&#39;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(
ISCHANGED(  Related_Vendor__c ),
ISCHANGED(  Planned_Start_Date_Time__c  ),
ISCHANGED(  Planned_End_Date_Time__c  )
)
)</errorConditionFormula>
    <errorMessage>Only the Status or Detailed Description may be changed when the Vendor Change Form is Approved.</errorMessage>
</ValidationRule>