force-app/main/default/objects/Request_for_Change__c/validationRules/RFC_Vendor_Outage.validationRule-meta.xml
<ValidationRule>
    <fullName>RFC_Vendor_Outage</fullName>
    <active>false</active>
    <description>If Vendor Outage is TRUE then Outage Duration and Description must be populated</description>
    <errorConditionFormula>AND(
ISPICKVAL(Vendor_Outage__c, &#39;Yes&#39;),
OR(
ISBLANK(  Vendor_Outage_Description__c  ), 
ISBLANK( Outage_Duration__c )
))</errorConditionFormula>
    <errorMessage>If Vendor Outage is YES then please populate a value for Vendor Outage Duration and Vendor Outage Description.</errorMessage>
</ValidationRule>