force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_Approval_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_Approval_is_Required</fullName>
    <active>true</active>
    <description>You can&apos;t complete the &apos;Complete RFC&apos; field until the Status = Approved</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Status__c,&apos;Approved&apos; )),
NOT(ISPICKVAL( Status__c,&apos;Complete&apos; )),
NOT(ISPICKVAL( Status__c,&apos;Unsuccessful&apos; )),
NOT(ISPICKVAL( Complete_RFC__c , &apos;&apos; ))
)</errorConditionFormula>
    <errorDisplayField>Complete_RFC__c</errorDisplayField>
    <errorMessage>You can not complete an RFC until the Status = Approved</errorMessage>
</ValidationRule>