force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_Completed</fullName>
    <active>true</active>
    <description>If Completed Unsuccessfully then other fields are required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Complete_RFC__c , &#39;Unsuccessful&#39;),
ISPICKVAL ( Unsuccessful_Type__c, &#39;&#39; ),
ISBLANK( Unsuccessful_Details__c ),
ISPICKVAL ( NOC_Alert_Created__c, &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Complete_RFC__c</errorDisplayField>
    <errorMessage>When an RFC is completed Unsuccessful then the Type, Details, and NOC Alert must be populated</errorMessage>
</ValidationRule>