force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_NOCalert.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_NOCalert</fullName>
    <active>true</active>
    <description>If a NOC Alert has been created then the user must populate the NOC Case</description>
    <errorConditionFormula>AND(
ISPICKVAL(NOC_Alert_Created__c,&#39;Yes&#39;),
ISBLANK( NOC_Alert_Case__c)
)</errorConditionFormula>
    <errorDisplayField>NOC_Alert_Case__c</errorDisplayField>
    <errorMessage>A NOC Case # is required when the NOC Alert is marked as yes</errorMessage>
</ValidationRule>