force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_OutageRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_OutageRequired</fullName>
    <active>true</active>
    <description>If Outage is yes, then none of the Outage fields can be blank</description>
    <errorConditionFormula>AND(
ISPICKVAL( Vendor_Outage__c , &#39;Yes&#39;),
ISBLANK(Outage_Start_Date_Time__c),
ISBLANK(Outage_End_Date_Time__c),
ISBLANK(Vendor_Change_Impact__c),
ISBLANK(Outage_Location__c) 
)</errorConditionFormula>
    <errorDisplayField>Vendor_Outage__c</errorDisplayField>
    <errorMessage>If Outage = Yes, then all outage fields must be populated.</errorMessage>
</ValidationRule>