force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_Typelockedafterdraft.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_Typelockedafterdraft</fullName>
    <active>true</active>
    <description>Lock the Type field if the Status is not Draft</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;Approved&apos;) ||
ISPICKVAL(Status__c,&apos;Pending Approval(s)&apos;) ||
ISPICKVAL(Status__c,&apos;Canceled&apos;) ||
ISPICKVAL(Status__c,&apos;Complete&apos;) ||
ISPICKVAL(Status__c,&apos;Unsuccessful&apos;) ||
ISPICKVAL(Status__c,&apos;CAB Approved&apos;),
ISCHANGED( Type__c ) 
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Once the status has moved beyond Draft, you can no longer change the Type field</errorMessage>
</ValidationRule>