force-app/main/default/objects/Request_for_Change__c/validationRules/RFCnew_VendorRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>RFCnew_VendorRequired</fullName>
    <active>true</active>
    <description>If Vendor is selected as the Type then the Related Vendor is required</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c,&#39;Vendor&#39;),
ISBLANK( Related_Vendor__c ) 
)</errorConditionFormula>
    <errorDisplayField>Related_Vendor__c</errorDisplayField>
    <errorMessage>Related Vendor is required if the Type is a Vendor Change</errorMessage>
</ValidationRule>