force-app/main/default/objects/Request_for_Change__c/listViews/All_Requests_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>All_Requests_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Category__c</columns>
    <columns>Action__c</columns>
    <columns>PGi_Product_Name__c</columns>
    <columns>Planned_Start_Date_Time__c</columns>
    <columns>Planned_End_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval(s)</value>
    </filters>
    <label>All Requests Pending Approval</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>