force-app/main/default/objects/Request_for_Change__c/listViews/All_rfc.listView-meta.xml
<ListView>
    <fullName>All_rfc</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>