force-app/main/default/objects/Request_for_Change__c/listViews/All_Vendor_Change_Requests_beyond_today.listView-meta.xml
<ListView>
    <fullName>All_Vendor_Change_Requests_beyond_today</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Related_Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Date_Time__c</columns>
    <columns>Planned_End_Date_Time__c</columns>
    <columns>Requested_By_s_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Complete,Rejected</value>
    </filters>
    <filters>
        <field>Planned_End_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>All Vendor Requests (today or beyond)</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>