force-app/main/default/objects/Request_for_Change__c/listViews/GL_GM_Web_Projects.listView-meta.xml
<ListView>
    <fullName>GL_GM_Web_Projects</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Start_Date_Time__c</columns>
    <columns>Planned_End_Date_Time__c</columns>
    <columns>Planned_Duration__c</columns>
    <columns>Short_Description__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled,Complete,Unsuccessful</value>
    </filters>
    <label>GL-GM Web Projects</label>
    <language>en_US</language>
    <queue>PGi_RFC_GL_GM_Web_Projects</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>